--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -6,44 +6,71 @@
     android:layout_height="match_parent"
     tools:viewBindingIgnore="true"
     tools:context=".activities.PasswordResetActivity"
-    android:background="@color/gray_1"
     android:padding="24dp">
 
-    <EditText
-        android:id="@+id/pwdResetEmail_editText"
-        android:hint="Email ID"
-        android:inputType="textEmailAddress"
-        style="@style/user_det_style"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
-
-    <Button
-        android:id="@+id/pwdReset_button"
-        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
+    <ImageView
+        android:id="@+id/forgotPass_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Reset Mail"
-        android:textColor="@color/purple"
-        android:backgroundTint="@color/white"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/il_forgot_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pwdResetEmail_editText" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/pwdResetSignIn_button"
-        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TRY SIGNING IN"
-        android:backgroundTint="@color/purple"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="#40000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pwdReset_button" />
+        app:layout_constraintTop_toBottomOf="@id/forgotPass_imageView">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:background="#40000000">
+
+
+            <EditText
+                android:id="@+id/pwdResetEmail_editText"
+                style="@style/user_det_style"
+                android:hint="Email ID"
+                android:inputType="textEmailAddress"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/pwdResetEmail_editText"
+                app:layout_constraintStart_toStartOf="@id/pwdResetEmail_editText"
+                app:layout_constraintTop_toBottomOf="@+id/pwdResetEmail_editText">
+
+                <Button
+                    android:id="@+id/pwdReset_button"
+                    style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="4dp"
+                    android:text="Send Reset Mail"
+                    android:backgroundTint="?android:attr/textColorPrimary"/>
+
+                <Button
+                    android:id="@+id/pwdResetSignIn_button"
+                    style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:text="TRY SIGNING IN"
+                    android:backgroundTint="@color/purple" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
