--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -21,4 +21,10 @@
         <item name="cornerSizeTopLeft">20dp</item>
         <item name="cornerSizeTopRight">20dp</item>
     </style>
+    <style name="background_switch">
+        <item name="android:backgroundTint">@color/black</item>
+    </style>
+    <style name="text_color_switch">
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
