--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="gray_2">#3C3F41</color>
     <color name="gray_3">#898A8D</color>
     <color name="dark_orange">#FEC344</color>
+    <color name="yellow">#FFEB3B</color>
     <color name="purple">#7962E5</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
