--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="Theme.FingerTrip" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/dark_orange</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -11,7 +11,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#C3E4FF</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/yellow</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="logoImageStyle">
@@ -41,6 +41,7 @@
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:textColorHint">@color/gray_3</item>
         <item name="android:background">@drawable/rectangle_rounded_corner_box</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="dev_details">
@@ -53,6 +54,6 @@
         <item name="android:backgroundTint">@color/white</item>
     </style>
     <style name="text_color_switch">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
